[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itllib"
version = "0.0.2"
authors = [
  { name="That Dev", email="sunny@thatone.ai" },
]
description = "Utility functions for provisioning"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "websockets",
    "boto3",
    "aiohttp",
    "pydantic"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

